# loopx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTOR_TASKS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: README.md  architecture.md  attention-queue.md  authority-source-registration.md  benchmark-developer-workflow.md  codex-cli-long-run-benchmark-design.md  codex-cli-long-run-regression.md  complex-project-readonly-adapter.md  dashboard-frontend-selection.md  dreaming-exploration-lane.md  experiment-controller-milestone.md  extensions.md  field-derived-patterns.md  frontstage-channel-lease-roadmap.md  heartbeat-automation-prompt.md  integration.md  interaction-pattern-catalog.md  interface-budget-contract.md  lark-kanban-control-plane-adapter.md  new-project-codex-prompt.md  project-agent-todo-contract.md  public-private-boundary.md  quota-allocation.md  reward-gate-direct-write-contract.md  runtime-connector-catalog.md  session-runtime-control-plane-adapter.md  state-interaction-model.md  status-data-contract.md  worker-bridge-install-contract.md
examples/: active-goal-state.example.md  active-state-interface-budget-smoke.py  active-user-assisted-pilot-smoke.py  agent-diagnose-packet-smoke.py  agentissue-bench-codex-cli-runner-pr-ready-packet-smoke.py  agentissue-bench-codex-cli-runner-publication-change-set-smoke.py  agentissue-bench-codex-cli-runner-target-handoff-smoke.py  auto-research-demo-acceptance-smoke.py  auto-research-demo-e2e-smoke.py  auto-research-demo-e2e-worker-loop-smoke.py  auto-research-demo-goal-isolation-smoke.py  (+217 more)
(+647 files in other folders)
