[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "goal-harness"
version = "0.1.0"
description = "A lightweight harness for long-running agent goals."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Goal Harness contributors" }]
dependencies = []

[project.scripts]
goal-harness = "goal_harness.cli:main"

[tool.setuptools.packages.find]
include = ["goal_harness*"]
